[project]
name = "llm-prompt-injection-analyzer"
version = "1.2.0"
description = "Hybrid AI Defense for LLM Prompt Injection (OWASP LLM01)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
package = false
